--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc && cd frontend && npm run build && cd ..",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "postinstall": "npm run build && cd frontend && npm run build && cd .. && echo 'Build complete'"
   },
   "repository": {
     "type": "git",
