Create build dev script.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc && cd frontend && npm run build && cd ..",
+    "build": "tsc",
+    "buildDev": "tsc && cd frontend && npm run build && cd ..",
     "start": "node build/server.js",
     "postinstall": "npm run build && cd frontend && npm install && cd .. && echo 'Build complete'"
   },
